20240416 QueryDSL 페이징 완료 게시글 전체 조회 N+1 문제 해결 N+1 문제 수정중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,7 @@
                 <input class="form-control mr-sm-2" type="text" name="searchKeyword" id="search" placeholder="검색어를 입력하세요."
                        th:value="${param.searchKeyword}"/>
                 <input type="hidden" name="postType" th:value="${param.postType}" />
+                <input type="hidden" name="myPost" th:value="${param.myPost}" />
                 <button class="btn btn-primary">검색</button>
             </form>
         </div>
