--- a/src/main/resources/templates/posts-read.html
+++ b/src/main/resources/templates/posts-read.html
@@ -39,10 +39,7 @@
         </div>
         <div class="form-group">
 <!--            <label for="content">내용</label>-->
-            <div id="content" th:utext="${post.content}"></div>
-            <th:block th:each="image : ${postsImages}">
-                <img width="500" th:src="'/files/' + ${image.url}"/>
-            </th:block>
+            <article id="content" th:utext="${post.content}"></article>
         </div>
         <div class="form-group">
             <label for="content" th:text="'조회수 : ' + ${post.view}"></label>
