20240426 회원 계정 username 을 추가하고 email 필드를 이메일로 변경 회원가입 할 때 이메일 인증 과정에서 이메일 입력후 인증번호 전송까지는 구현 완료 인증번호 검증 과정 구현중

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -42,11 +42,11 @@
                                 </div>
                                 <form class="user" action="/auth/joinProc" method="post">
                                     <div class="form-group">
-                                        <span class="m-0 font-weight-bold text-primary">계정</span>
-                                        <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                               th:value="${userDto != null ? userDto.email : ''}"
-                                               name="email" placeholder="이메일을 입력하세요.">
-                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_email != null}" th:text="${valid_email}"></span>
+                                        <span class="m-0 font-weight-bold text-primary">아이디</span>
+                                        <input type="text" class="form-control form-control-user" id="exampleInputAccount"
+                                               th:value="${userDto != null ? userDto.username : ''}"
+                                               name="username" placeholder="아이디를 입력하세요.">
+                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_username != null}" th:text="${valid_username}"></span>
                                     </div>
                                     <div class="form-group">
                                         <span class="m-0 font-weight-bold text-primary">닉네임</span>
@@ -55,6 +55,27 @@
                                                name="name" placeholder="닉네임을 입력하세요.">
                                         <span class="m-0 font-weight-bold text-danger" th:if="${valid_name != null}" th:text="${valid_name}"></span>
                                     </div>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">이메일</span>
+                                        <input type="email" class="form-control form-control-user"
+                                               id="email"
+                                               th:value="${userDto != null ? userDto.email : ''}"
+                                               name="email" placeholder="이메일을 입력하세요.">
+<!--                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_email != null}" th:text="${valid_email}"></span>-->
+                                    </div>
+                                    <button type="button" class="btn btn-info btn-user btn-block" id="btn-sendEmail">
+                                        인증번호 발송
+                                    </button>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">인증번호</span>
+                                        <input type="text" class="form-control form-control-user"
+                                               id="userNumber"
+                                               name="userNumber" placeholder="인증번호를 입력하세요.">
+                                        <!--                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_email != null}" th:text="${valid_email}"></span>-->
+                                    </div>
+                                    <button type="button" class="btn btn-info btn-user btn-block" id="btn-checkNumber">
+                                        인증번호 확인
+                                    </button>
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
                                             <span class="m-0 font-weight-bold text-primary">비밀번호</span>
