--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,11 +43,11 @@
                                 </div>
                                 <form class="user" action="/loginProc" method="post">
                                     <div class="form-group">
-                                        <span class="m-0 font-weight-bold text-primary">계정</span>
-                                        <input type="email" class="form-control form-control-user"
-                                               id="email" aria-describedby="emailHelp"
-                                               name="email"
-                                               placeholder="이메일을 입력하세요">
+                                        <span class="m-0 font-weight-bold text-primary">아이디</span>
+                                        <input type="text" class="form-control form-control-user"
+                                               id="username" aria-describedby="emailHelp"
+                                               name="username"
+                                               placeholder="아이디를 입력하세요">
                                     </div>
                                     <div class="form-group">
                                         <span class="m-0 font-weight-bold text-primary">비밀번호</span>
