--- a/src/main/resources/templates/user-update.html
+++ b/src/main/resources/templates/user-update.html
@@ -40,20 +40,24 @@
                                     <input type="hidden" id="id" th:value="${sessionUserDto.id}"/>
                                     <input type="hidden" id="modifiedDate" th:value="${sessionUserDto.modifiedDate}"/>
                                     <div class="form-group">
-                                        <span class="m-0 font-weight-bold text-primary">계정</span>
-                                        <input type="email" class="form-control form-control-user" id="email"
-                                               th:value="${sessionUserDto.email}" name="email" readonly>
+                                        <span class="m-0 font-weight-bold text-primary">아이디</span>
+                                        <input type="text" class="form-control form-control-user" id="username"
+                                               th:value="${sessionUserDto.username}" name="username" readonly>
                                     </div>
                                     <div class="form-group">
                                         <span class="m-0 font-weight-bold text-primary">닉네임</span>
                                         <input type="text" class="form-control form-control-user" id="name"
                                                th:value="${sessionUserDto.name}" name="name" placeholder="닉네임을 입력하세요.">
 <!--                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_name != null}" th:text="${valid_name}"></span>-->
-
+                                    </div>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">이메일</span>
+                                        <input type="email" class="form-control form-control-user" id="email"
+                                               th:value="${sessionUserDto.email}" name="email" readonly>
                                     </div>
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
-                                            <span class="m-0 font-weight-bold text-primary">변경할 비밀번호</span>
+                                            <span class="m-0 font-weight-bold text-primary">새비밀번호</span>
                                             <input type="password" class="form-control form-control-user"}
                                                    name="password" id="password" placeholder="비밀번호">
                                         </div>
