--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -76,6 +76,9 @@
                                     <button type="button" class="btn btn-info btn-user btn-block" id="btn-checkNumber">
                                         인증번호 확인
                                     </button>
+
+<!--                                    <input type="hidden" name="emailConfirm" id="emailConfirm" value="" />-->
+
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
                                             <span class="m-0 font-weight-bold text-primary">비밀번호</span>
