--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -48,37 +48,6 @@
                                                name="username" placeholder="아이디를 입력하세요.">
                                         <span class="m-0 font-weight-bold text-danger" th:if="${valid_username != null}" th:text="${valid_username}"></span>
                                     </div>
-                                    <div class="form-group">
-                                        <span class="m-0 font-weight-bold text-primary">닉네임</span>
-                                        <input type="text" class="form-control form-control-user" id="inputName"
-                                               th:value="${userDto != null ? userDto.name : ''}"
-                                               name="name" placeholder="닉네임을 입력하세요.">
-                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_name != null}" th:text="${valid_name}"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <span class="m-0 font-weight-bold text-primary">이메일</span>
-                                        <input type="email" class="form-control form-control-user"
-                                               id="email"
-                                               th:value="${userDto != null ? userDto.email : ''}"
-                                               name="email" placeholder="이메일을 입력하세요.">
-<!--                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_email != null}" th:text="${valid_email}"></span>-->
-                                    </div>
-                                    <button type="button" class="btn btn-info btn-user btn-block" id="btn-sendEmail">
-                                        인증번호 발송
-                                    </button>
-                                    <div class="form-group">
-                                        <span class="m-0 font-weight-bold text-primary">인증번호</span>
-                                        <input type="text" class="form-control form-control-user"
-                                               id="userNumber"
-                                               name="userNumber" placeholder="인증번호를 입력하세요.">
-                                        <!--                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_email != null}" th:text="${valid_email}"></span>-->
-                                    </div>
-                                    <button type="button" class="btn btn-info btn-user btn-block" id="btn-checkNumber">
-                                        인증번호 확인
-                                    </button>
-
-<!--                                    <input type="hidden" name="emailConfirm" id="emailConfirm" value="" />-->
-
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
                                             <span class="m-0 font-weight-bold text-primary">비밀번호</span>
@@ -95,6 +64,33 @@
                                             <span class="m-0 font-weight-bold text-danger" th:if="${valid_passwordConfirm != null}" th:text="${valid_passwordConfirm}"></span>
                                         </div>
                                     </div>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">닉네임</span>
+                                        <input type="text" class="form-control form-control-user" id="inputName"
+                                               th:value="${userDto != null ? userDto.name : ''}"
+                                               name="name" placeholder="닉네임을 입력하세요.">
+                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_name != null}" th:text="${valid_name}"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">이메일</span>
+                                        <input type="email" class="form-control form-control-user"
+                                               id="email"
+                                               th:value="${userDto != null ? userDto.email : ''}"
+                                               name="email" placeholder="이메일을 입력하세요.">
+                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_email != null}" th:text="${valid_email}"></span>
+                                    </div>
+                                    <button type="button" class="btn btn-info btn-user btn-block" id="btn-sendEmail">
+                                        인증번호 발송
+                                    </button>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">인증번호</span>
+                                        <input type="text" class="form-control form-control-user"
+                                               id="code"
+                                               th:value="${userDto != null ? userDto.code : ''}"
+                                               name="code" placeholder="인증번호를 입력하세요.">
+                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_code != null}" th:text="${valid_code}"></span>
+                                    </div>
+
                                     <button type="submit" class="btn btn-primary btn-user btn-block">
                                         가입하기
                                     </button>
