20240503 아이디 찾기, 비밀번호 찾기 일부 구현

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -78,10 +78,13 @@
                                 </form>
                                 <hr>
                                 <div class="text-center">
-                                    <a href="#" class="small" >비밀번호 찾기</a>
+                                    <a class="small" href="/auth/find-username1">아이디 찾기</a>
                                 </div>
                                 <div class="text-center">
-                                    <a href="/auth/join" class="small">회원가입</a>
+                                    <a class="small" href="/auth/find-password">비밀번호 찾기</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" href="/auth/join">회원가입</a>
                                 </div>
                             </div>
                         </div>
