--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -82,6 +82,7 @@
                                     <button type="button" class="btn btn-info btn-user btn-block" id="btn-sendEmail">
                                         인증번호 발송
                                     </button>
+                                    <div id="timer">1:00</div>
                                     <div class="form-group">
                                         <span class="m-0 font-weight-bold text-primary">인증번호</span>
                                         <input type="text" class="form-control form-control-user"
