--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>회원정보 수정</title>
+    <title>회원정보</title>
 
     <!-- Custom fonts for this template-->
     <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
                         <div class="col-lg-12">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-4">회원정보 수정</h1>
+                                    <h1 class="h4 text-gray-900 mb-4">회원정보</h1>
                                 </div>
                                 <form class="user">
                                     <input type="hidden" id="id" th:value="${sessionUserDto.id}"/>
@@ -48,22 +48,19 @@
                                         <span class="m-0 font-weight-bold text-primary">닉네임</span>
                                         <input type="hidden" th:value="${sessionUserDto.name}" id="sessionName" name="sessionName">
                                         <input type="text" class="form-control form-control-user" id="name"
-                                               th:value="${sessionUserDto.name}" name="name" placeholder="닉네임을 입력하세요.">
-<!--                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_name != null}" th:text="${valid_name}"></span>-->
+                                               th:value="${sessionUserDto.name}" name="name" readonly>
                                     </div>
                                     <div class="form-group">
                                         <span class="m-0 font-weight-bold text-primary">이메일</span>
                                         <input type="email" class="form-control form-control-user" id="email"
                                                th:value="${sessionUserDto.email}" name="email" readonly>
                                     </div>
-                                    <div class="form-group">
-                                        <span class="m-0 font-weight-bold text-primary">비밀번호</span>
-                                        <input type="password" class="form-control form-control-user" id="password"
-                                                name="password" placeholder="비밀번호를 입력하세요.">
-                                    </div>
-                                    <button id="btn-modify" type="button" class="btn btn-primary btn-user btn-block">
-                                        수정하기
-                                    </button>
+                                    <a href="/update" type="button" class="btn btn-primary btn-user btn-block">
+                                        회원정보 수정
+                                    </a>
+                                    <a href="/password-update" class="btn btn-warning btn-user btn-block">
+                                        비밀번호 변경
+                                    </a>
                                     <a href="/" class="btn btn-info btn-user btn-block">
                                         홈으로
                                     </a>
